Fix an issue with not showing enough content

--- a/css/my-app.css
+++ b/css/my-app.css
@@ -111,7 +111,7 @@ input[type=text] {
 .page-content {
   top: -103px;
   position: relative;
-  height: 140%;
+  height: 120%;
 }
 
 #textComment {
